Notebook 02 and Review 01

--- a/02-StringsIndexingSlicing.ipynb
+++ b/02-StringsIndexingSlicing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-08b5cdaf26ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' was born in '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbirth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Notice the spaces before and after 'was born in'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-14-08b5cdaf26ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' was born in '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbirth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Notice the spaces before and after 'was born in'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
      ]
     }
@@ -378,9 +378,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-c029398ca865>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{} was born in {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbirth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' was born in '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbirth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'was born in'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbirth\u001b[0m\u001b[0;34m)\u001b[0m      \u001b[0;31m# Here the spaces are not needed, they are added for each comma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print('{} was born in {}'.format(name, birth))\n",
     "print(name + ' was born in ' + str(birth))\n",
@@ -518,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +540,7 @@
       "Mary had a little lamb,\n",
       "\tIts fleece was white as snow,\n",
       "And every where that Mary went\n",
-      "\tThelambwas sure to go;\n",
+      "\tThelambwas sure to go,\n",
       "He followed her to school one day—\n",
       "\tThat was against the rule,\n",
       "It made the children laugh and play,\n",
@@ -542,7 +554,7 @@
     "print (\"Mary had a little {},\".format(animal))\n",
     "print (\"\\tIts fleece was white as snow,\")\n",
     "print (\"And every where that Mary went\")\n",
-    "print (\"\\tThe\" + animal + \"was sure to go;\")\n",
+    "print (\"\\tThe\" + animal + \"was sure to go,\")\n",
     "print (\"He followed her to school one day—\")\n",
     "print (\"\\tThat was against the rule,\")\n",
     "print (\"It made the children laugh and play,\")\n",
@@ -559,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +583,7 @@
       "However his friend from the USA don't understand the metric system.\n",
       "Talking to him, John is 70.07874015748031 inches tall.\n",
       "But height is usually expressed in feet.\n",
-      "So name is 5.83989501312336 feet and 10.078740157480311 inches tall.\n"
+      "So John is 5.83989501312336 feet and 10.078740157480311 inches tall.\n"
      ]
     }
    ],
@@ -587,7 +599,7 @@
     "\n",
     "print(\"Talking to him, {} is {} inches tall.\".format(name, inches))\n",
     "print('But height is usually expressed in feet.')\n",
-    "print('So name is {} feet and {} inches tall.'.format(inches / 12, inches % 12))"
+    "print('So {} is {} feet and {} inches tall.'.format(name,inches / 12, inches % 12))"
    ]
   },
   {
@@ -637,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +660,7 @@
       "velofood \n",
       "move on\n",
       "Shake the fool\n",
-      "I love food\n"
+      "I love food (Shakespeare)\n"
      ]
     }
    ],
@@ -668,7 +680,7 @@
     "print(verse[39:-7], verse[12:-36], verse[16:19]+verse[31])\n",
     "\n",
     "# I love food (Shakespeare)\n",
-    "print(verse[0], verse[24:-23], verse[16:20])\n"
+    "print(verse[0], verse[24:-23], verse[16:20], verse [38:])\n"
    ]
   },
   {
